Align fixed

--- a/templates/css/weather.css
+++ b/templates/css/weather.css
@@ -3,7 +3,7 @@
 
 #weather_wrapper{
 	width: 400px;
-	margin: 100px auto;
+	margin: 0px auto;
 }
 .weatherCard{
 	width: 400px;
